--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -1,4 +1,7 @@
 .page {
+	// .page__categories
+	&__categories {
+	}
 	// .page__servises
 	&__servises {
 	}
@@ -19,6 +22,97 @@
 	}
 }
 //====================================================================================================
+
+//========================================================================================================================================================
+// .page__categories
+.categories {
+	@include adaptiveValue("padding-top", 77, 40);
+	@include adaptiveValue("padding-bottom", 65, 40);
+	// .categories__container
+	&__container {
+	}
+	// .categories__inner
+	&__inner {
+	}
+	// .categories__subtitle
+	&__subtitle {
+		@include adaptiveValue("font-size", 18, 15);
+		color: #ffcc00;
+		text-transform: uppercase;
+		text-align: center;
+		&:not(:last-child) {
+			margin-bottom: rem(3);
+		}
+	}
+	// .categories__title
+	&__title {
+		position: relative;
+		@include adaptiveValue("font-size", 55, 35);
+		font-weight: 600;
+		line-height: 1.49; /* 82/55 */
+		color: #000;
+		text-align: center;
+		&:not(:last-child) {
+			@include adaptiveValue("margin-bottom", 130, 50);
+		}
+	}
+	// .categories__content
+	&__content {
+	}
+	// .categories__item
+	&__item {
+		display: flex;
+		justify-content: space-between;
+		gap: rem(30);
+		@media (max-width: $tablet) {
+			flex-wrap: wrap;
+			justify-content: center;
+		}
+	}
+	// .categories__card
+	&__card {
+		display: flex;
+		flex-direction: column;
+		text-align: center;
+		@media (max-width: $tablet) {
+			flex: 0 1 45%;
+		}
+		@media (max-width: rem(676)) {
+			flex: 0 1 90%;
+		}
+	}
+	// .categories__image
+	&__image {
+		max-width: rem(278);
+		@media (max-width: $tablet) {
+			max-width: rem(450);
+		}
+		@media (max-width: rem(676)) {
+			max-width: rem(570);
+		}
+		// filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+		img {
+			width: 100%;
+			height: 100%;
+		}
+		&:not(:last-child) {
+			@include adaptiveValue("margin-bottom", 37, 10);
+		}
+	}
+	// .categories__name
+	&__name {
+		font-size: rem(24);
+		line-height: 1.50; /* 36/24 */
+		font-weight: 700;
+	}
+	// .categories__desc
+	&__desc {
+		font-size: rem(20);
+		line-height: 1.50; /* 30/20 */
+		font-weight: 600;
+	}
+}
+
 
 //========================================================================================================================================================
 // .page__servises
@@ -227,6 +321,7 @@
 		position: relative;
 		@include adaptiveValue("font-size", 55, 35);
 		line-height: 1.49; /* 82/55 */
+		font-weight: 600;
 		color: #000;
 		text-align-last: left;
 		&:not(:last-child) {
@@ -346,6 +441,7 @@
 	&__title {
 		position: relative;
 		@include adaptiveValue("font-size", 55, 35);
+		font-weight: 600;
 		line-height: 1.49; /* 82/55 */
 		color: #000;
 		text-align: center;
