--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -39,7 +39,8 @@
 		width: 100%;
 		max-width: rem(380);
 		@media (max-width: rem(1055)){
-			margin-bottom: rem(90);
+			//margin-bottom: rem(90);
+			@include adaptiveValue("margin-bottom", 90, 40);
 		}
 	}
 	// .footer__box
@@ -56,12 +57,7 @@
 			color: #ffcc00;
 		}
 		&:not(:last-child) {
-			margin-bottom: rem(47);
-		}
-		@media (max-width:$mobile){
-			&:not(:last-child) {
-				margin-bottom: rem(30);
-			}
+			@include adaptiveValue("margin-bottom", 47, 15);
 		}
 	}
 	// .footer__social
