--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -69,7 +69,7 @@
 	}
 	// .first__title
 	&__title {
-		@include adaptiveValue("font-size", 64, 20);
+		@include adaptiveValue("font-size", 64, 24);
 		font-weight: 600;
 		line-height: 1.5; /* 96/64 */
 		&:not(:last-child) {
@@ -79,13 +79,13 @@
 	&__row {
 		display: flex;
 		align-items: center;
-		@include adaptiveValue("gap", 29, 10);
+		@include adaptiveValue("gap", 29, 15);
 	}
 	&__block {
 		display: flex;
 		flex-direction: column;
-		@include adaptiveValue("width", 205, 70);
-		@include adaptiveValue("height", 205, 70);
+		@include adaptiveValue("width", 205, 100);
+		@include adaptiveValue("height", 205, 100);
 		border-radius: 50%;
 		background: #ffcc00;
 		text-align: center;
@@ -95,19 +95,19 @@
 	&__percent {
 		font-weight: 700;
 		font-size: rem(44);
-		@include adaptiveValue("font-size", 44, 16);
+		@include adaptiveValue("font-size", 44, 24);
 		line-height: 1.55; /* 96/62 */
 	}
 	// .first__discount
 	&__discount {
 		font-weight: 700;
 		font-size: rem(32);
-		@include adaptiveValue("font-size", 32, 12);
+		@include adaptiveValue("font-size", 32, 16);
 		line-height: 1.55; /* 96/62 */
 	}
 	// .first__desc
 	&__desc {
-		@include adaptiveValue("font-size", 36, 10);
+		@include adaptiveValue("font-size", 36, 16);
 		font-weight: 600;
 		line-height: 1.5; /* 54/36 */
 		@include adaptiveValue("max-width", 324, 170);
@@ -347,12 +347,14 @@
 	&__card {
 		display: flex;
 		flex-direction: column;
+		text-align: center;
+		//justify-content: center;
+		// margin: 0 auto;
 		@media (max-width: $tablet) {
 			flex: 0 1 45%;
 		}
 		@media (max-width: rem(676)) {
 			flex: 0 1 100%;
-			//justify-content: center;
 		}
 	}
 	// .outlet__image
@@ -368,7 +370,9 @@
 			max-width: rem(450);
 		}
 		@media (max-width: rem(676)) {
-			max-width: rem(570);
+			max-width: rem(650);
+			width: 100%;
+			margin: 0 auto;
 		}
 	}
 	// .outlet__location
@@ -596,7 +600,9 @@
 			max-width: rem(450);
 		}
 		@media (max-width: rem(676)) {
-			max-width: rem(570);
+			max-width: rem(650);
+			width: 100%;
+			margin: 0 auto;
 		}
 		// filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 		img {
