--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,11 +1,15 @@
 //====================================================================================================
 .header {
-	position: fixed;
+	position: absolute;
 	width: 100%;
 	top: 0;
 	left: 0;
 	z-index: 50;
-	//background-color: #000;
+	@media (max-width:$tablet){
+		position: fixed;
+		background-color: rgba(0, 0, 0, 0.50);
+	}
+
 	// .header__container
 	&__container {
 		display: flex;//
@@ -20,7 +24,7 @@
 		}
 		@media (max-width: $mobile) {
 			column-gap: rem(15);//
-			min-height: rem(70);//
+			//min-height: rem(70);//
 		}
 	}
 	// .header__logo
@@ -138,7 +142,7 @@
 
 @media (max-width: $mobile) {
 	.header {
-		background: #000;
+		background-color: rgba(0, 0, 0, 0.50);	
 	}
 	.icon-menu {
 		display: block;//
@@ -184,11 +188,14 @@
 		width: 100%;
 		height: 100%;
 		background-color: #000;
+		background-color: rgba(0, 0, 0, 0.95);
 		left: -100%;
 		top: 0;
-		padding: 100px 15px 30px 15px;
+		// padding: 100px 15px 30px 15px;
+		padding-top: rem(120);
 		overflow: auto;
 		transition: left 0.3s ease 0s;
+
 	}
 	.menu__body::before {
 		content: "";
@@ -198,6 +205,7 @@
 		left: -100%;
 		height: 70px;
 		background-color: #000;
+		background-color: rgba(0, 0, 0, 0.95);
 		z-index: 2;
 		transition: left 0.3s ease 0s;
 	}
@@ -214,7 +222,7 @@
 	.menu-open .menu__body,
 	.menu-open .menu__body::before {
 		left: 0;
-		margin-top: rem(40);
+		//margin-top: rem(40);
 	}
 }
 
